# WonderSenseNative-Parser

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json  parser.cpp  parser.hpp  run.sh  test.sh
.clangd/index/: __fpos64_t.h.17D15E2B207C2A61.idx  __fpos_t.h.963F544188B39C92.idx  __locale_t.h.EFD2EEF88C7BC9DC.idx  __stddef_max_align_t.h.8DC794BB17C36A7E.idx  alloc_traits.h.13D1B38B073CCF12.idx  alloc_traits.h.E429CD30034E465D.idx  alloca.h.B3C3404035C15EA6.idx  allocator.h.007AC0B614B681A6.idx  array.661D83F8EAEC6A2D.idx  assertions.h.53103A5E3190F8FB.idx  atomic_word.h.8C17CD497028F3E5.idx  atomicity.h.AE30E8ADFAF883F1.idx  basic_string.h.37110F2A55A495BF.idx  basic_string.tcc.96FD0581ABE02E13.idx  binders.h.6BDD7FC84C0C14C1.idx  byteswap.h.94242F347BA9D8AE.idx  c++allocator.h.13FAFAA887F757E4.idx  c++config.h.B7318D00EA6CE6A0.idx  c++locale.h.C350DFB87F50625F.idx  cctype.03F3490969510981.idx  cdefs.h.FC477E759ACAD3AA.idx  cerrno.AD2F5D1C5561127C.idx  char_traits.h.A8F230B6B3072E4B.idx  clocale.2AA9BC5877C33BB1.idx  concept_check.h.268BE59FCB1EEF67.idx  cookie_io_functions_t.h.71B144EB69678E45.idx  cpp_type_traits.h.81DCE7FD737014C2.idx  cpu-set.h.CE4FA57DADE65D4C.idx  cpu_defines.h.2E6D0135E352ACE3.idx  cstdint.8EFBCBA3007A64A4.idx  cstdio.3AA52CF36DB18A34.idx  cstdlib.7C174D0D57FF3D5A.idx  ctype.h.8C666B63C116FFB8.idx  cwchar.C883C0F7B2306B6A.idx  cxxabi_forced.h.23807A4123C10918.idx  cxxabi_init_exception.h.8655CBBAC3570E80.idx  debug.h.0C540290C9DAF98B.idx  endian.h.86AC4579400E1F3C.idx  errno.h.3B388C5618606E4B.idx  errno.h.E95D16D80A970771.idx  (+92 more)
test/: CMakeLists.txt  test_impl.cpp  test_impl.hpp
